--- a/git.css
+++ b/git.css
@@ -1,3 +1,15 @@
 body {
     background-color: aqua;
 }
+
+h1 {
+    color: violet;
+    text-align: center;
+}
+p
+
+{
+    font-family: "Times New Roman";
+    font-size: 20px;
+    text-align: center;
+}
